--- a/.github/workflows/createIssueBranch.yml
+++ b/.github/workflows/createIssueBranch.yml
@@ -10,3 +10,5 @@ jobs:
     steps:
       - name: Create Issue Branch
         uses: robvanderleek/create-issue-branch@main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
