--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "homepage": "https://gitlab.com/suomikoodarit/html-js-css#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.5",
     "tailwindcss": "^2.2.19"
+  },
+  "dependencies": {
+    "postcss-cli": "^9.1.0"
   }
 }
