--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
+  "name": "suomikoodarit",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "tailwindcss build -i ./src/tailwind.css -o ./public/tailwind.css",
+    "build": "NODE_ENV=production npm run dev",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "suomikoodarit",
+  "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.0.2"
+    "autoprefixer": "^10.4.0",
+    "tailwindcss": "^3.0.7"
   }
 }
